# Constellations

./: .clang-format  CMakeLists.txt  LICENSE  README.md  vcpkg.json
data/ConstellationsNewSkills.esp/: RecordData.yaml
data/ConstellationsNewSkills.esp/Activators/: CNS_ApocryphaConstellationActivator_Athletics.yaml  CNS_ApocryphaConstellationActivator_HandToHand.yaml  CNS_ApocryphaConstellationActivator_Sorcery.yaml  GroupRecordData.yaml
data/ConstellationsNewSkills.esp/Armors/: CNS_EnchArmorBonemoldBootsAthletics01.yaml  CNS_EnchArmorBonemoldBootsAthletics02.yaml  CNS_EnchArmorBonemoldBootsAthletics03.yaml  CNS_EnchArmorBonemoldGauntletsHandToHand01.yaml  CNS_EnchArmorBonemoldGauntletsHandToHand02.yaml  CNS_EnchArmorBonemoldGauntletsHandToHand03.yaml  CNS_EnchArmorBonemoldGauntletsSorcery01.yaml  CNS_EnchArmorBonemoldGauntletsSorcery02.yaml  CNS_EnchArmorBonemoldGauntletsSorcery03.yaml  CNS_EnchArmorChitinHeavyGauntletsHandToHand02.yaml  CNS_EnchArmorChitinHeavyGauntletsHandToHand03.yaml  CNS_EnchArmorChitinHeavyGauntletsHandToHand04.yaml  CNS_EnchArmorChitinHeavyGauntletsSorcery02.yaml  CNS_EnchArmorChitinHeavyGauntletsSorcery03.yaml  CNS_EnchArmorChitinHeavyGauntletsSorcery04.yaml  CNS_EnchArmorChitinLightBootsAthletics02.yaml  CNS_EnchArmorChitinLightBootsAthletics03.yaml  CNS_EnchArmorChitinLightBootsAthletics04.yaml  CNS_EnchArmorChitinLightGauntletsHandToHand02.yaml  CNS_EnchArmorChitinLightGauntletsHandToHand03.yaml  CNS_EnchArmorChitinLightGauntletsHandToHand04.yaml  CNS_EnchArmorChitinLightGauntletsSorcery02.yaml  (+179 more)
data/Seq/: ConstellationsNewSkills.seq
scripts/: CNS_ApocryphaConstellationActivator.psc  CNS_InitScript.psc  CNS_MagicAddToFaction.psc  CNS_MagicEnsureInFaction.psc  CNS_ModObjects.psc  CNS_TIF__TrainingDurak.psc  CNS_TIF__TrainingEnthir.psc  CNS_TIF__TrainingErandur.psc  CNS_TIF__TrainingMauhulakh.psc  CNS_TIF__TrainingNjadaStonearm.psc  CNS_TIF__TrainingVipirtheFleet.psc  CNS_TIF__TrainingWylandriah.psc
src/Data/: Lookup.h  ModObjectManager.cpp  ModObjectManager.h  Skills.h
src/Hooks/: Athletics.cpp  Athletics.h  AthleticsPerks.cpp  AthleticsPerks.h  HandToHand.cpp  HandToHand.h  HandToHandPerks.cpp  HandToHandPerks.h  Sorcery.cpp  Sorcery.h  SorceryPerks.cpp  SorceryPerks.h
src/PerkUtils/: PerkUtils.h
src/RE/: Offset.h
src/common/: PCH.h
src/export/: SKSEPlugin.cpp
(+411 files in other folders)
